Changed the spacing in fixtures\*.yaml , added the email settings to settings.py. added the archiving.js to locker.js, in the migrations added the migrations comment

--- a/static/datalocker/css/common.css
+++ b/static/datalocker/css/common.css
@@ -5,6 +5,8 @@
 \*------------------------------------*/
 /**
  * CONTENTS.............You're reading it!
+ * ARCHIVED.............Automatically hides archived classes by default on page load 
+ * TOGGLESWITCH.........Toggle Switch the stying when entering and exiting maintenance mode
  * GENERAL..............General styles
  * ACCESSIBILITY........Improve the accessibility of certain structures
  * BUTTONS..............Button styling
@@ -14,31 +16,120 @@
 
 
 /*------------------------------------*\
-    $GENERAL
+    $ARCHIVED
 \*------------------------------------*/
-/* Automatically hides archived classes by default on page load */
+
 .archived {
   display: none;
 }
+
 .archive-button {
   float: right;
   margin-right: .5em;
 }
+
 .archived .js-archived-label {
   display: inline;
 }
+
+.js-archived-label {
+  display: none;
+}
+
+
+
+
+/*------------------------------------*\
+    $TOGGLESWITCH
+\*------------------------------------*/
+
+.label-for-toggle{
+  display: block;
+  position: relative;
+  float: right;
+  padding-right: 10px;
+}
+
+.onoffswitch {
+    position: relative; float: right;width: 90px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+
+.onoffswitch-checkbox {
+    display: none;
+}
+
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #999999; border-radius: 20px;
+}
+
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    box-sizing: border-box;
+}
+
+.onoffswitch-inner:before {
+    content: "OFF";
+    padding-left: 10px;
+    background-color: #EEEEEE; color: #999999;
+
+}
+
+.onoffswitch-inner:after {
+    content: "ON";
+    padding-right: 10px;
+    background-color: #34A7C1; color: #FFFFFF;
+    text-align: right;
+}
+
+.onoffswitch-switch {
+    display: block; width: 16px; margin: 6px;
+    background: #FFFFFF;
+    position: absolute; top: 0; bottom: 2px;
+    right: 56px;
+    border: 2px solid #999999; border-radius: 20px;
+    transition: all 0.3s ease-in 0s;
+}
+
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px;
+}
+
+/*-----------End code for the toggle switch --------*/
+
+
+
+
+/*------------------------------------*\
+    $GENERAL
+\*------------------------------------*/
+
 .deleted{
   display: none;
   text-decoration: line-through;
 }
+
 .delete-button{
 display: none;
 }
+
 .dl-horizontal dd {
   margin-left: 150px;
   line-height: 2.5;
   font-size:16px;
 }
+
 .dl-horizontal dt {
   float: left;
   width: 450px;
@@ -49,94 +140,47 @@ display: none;
  /* white-space: nowrap;*/
   font-size:16px;
 }
+
 .edit-button {
   float: right;
   margin-right: .5em;
 }
-.js-archived-label {
-  display: none;
-}
+
 .pagination {
   margin: .5em;
 }
+
 .pagination a {
   margin: .5em;
  }
+
 .rounding {
   border-radius: 5px;
 }
+
 .select-all-checkbox {
   font-size: 12px;
   font-weight: normal;
 }
+
 .submission-heading {
   font-weight: bold;
 }
+
 .sub-list {
   margin-left: 2em;
   font-size: 16px;
 }
+
 .sub-list dd {
   padding-bottom: 1em;
 }
+
 .undeleted-submission{
   display: none;
 }
-/*-----------CCS for the Toggle Switch -------------------------*/
-.label_for_toggle{
-  display: block;
-  position: relative;
-  float: right;
-  padding-right: 10px;
-}
-.onoffswitch {
-    position: relative; float: right;width: 90px;
-    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
-}
-.onoffswitch-checkbox {
-    display: none;
-}
-.onoffswitch-label {
-    display: block; overflow: hidden; cursor: pointer;
-    border: 2px solid #999999; border-radius: 20px;
-}
-.onoffswitch-inner {
-    display: block; width: 200%; margin-left: -100%;
-    transition: margin 0.3s ease-in 0s;
-}
-.onoffswitch-inner:before, .onoffswitch-inner:after {
-    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
-    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
-    box-sizing: border-box;
-}
-.onoffswitch-inner:before {
-    content: "OFF";
-    padding-left: 10px;
-    background-color: #EEEEEE; color: #999999;
 
-}
-.onoffswitch-inner:after {
-    content: "ON";
-    padding-right: 10px;
-    background-color: #34A7C1; color: #FFFFFF;
-    text-align: right;
-}
-.onoffswitch-switch {
-    display: block; width: 16px; margin: 6px;
-    background: #FFFFFF;
-    position: absolute; top: 0; bottom: 2px;
-    right: 56px;
-    border: 2px solid #999999; border-radius: 20px;
-    transition: all 0.3s ease-in 0s;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-    margin-left: 0;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right: 0px;
-}
 
-/*-----------End code for the toggle switch --------*/
 
 
 /*------------------------------------*\
